# nslc

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
lib/: CMakeLists.txt
lib/AST/: ASTNode.cpp  CMakeLists.txt  NodeKindNames.cpp  Printer.cpp
lib/Basic/: AssertImpl.h  CMakeLists.txt  Diagnostic.cpp  SourceLocation.cpp  SourceManager.cpp
lib/Driver/: CMakeLists.txt  Compilation.cpp  EmitAST.cpp  EmitHW.cpp  EmitMLIR.cpp  EmitTokens.cpp  EmitVerilog.cpp  LowerToCIRCT.cpp  LowerToNSL.cpp  RunCIRCTPasses.cpp  RunNSLPasses.cpp  Sema.cpp
lib/Fmt/: CMakeLists.txt  CST.h  CSTBuilder.cpp  CSTBuilder.h  CommentScanner.cpp  CommentScanner.h  Config.cpp  ConfigDiscovery.cpp  Diff.cpp  Diff.h  DirectiveSplitter.cpp  DirectiveSplitter.h  Doc.cpp  Doc.h  Format.cpp  LayoutPlanner.cpp  LayoutPlanner.h  LayoutRenderer.cpp  LayoutRenderer.h  Stub.cpp
lib/LSP/: CMakeLists.txt  CancellationToken.h  DiagnosticMapper.cpp  DiagnosticMapper.h  FoldingRangeBuilder.cpp  FoldingRangeBuilder.h  FormattingHandler.cpp  FormattingHandler.h  IncludeSearchPath.cpp  IncludeSearchPath.h  JSONTransport.cpp  JSONTransport.h  Logger.cpp  Logger.h  NslLSPServer.cpp  NslLSPServer.h  NslServer.cpp  NslServer.h  NslTU.cpp  NslTU.h  PositionEncoding.cpp  PositionEncoding.h  RequestId.h  Server.cpp  TUScheduler.cpp  TUScheduler.h
lib/Lex/: CMakeLists.txt  KeywordSet.cpp  Lexer.cpp  NumberLiteral.cpp  NumberLiteral.h  Token.cpp
lib/Lower/: ASTToMLIR.cpp  ASTToMLIR.h  CMakeLists.txt  Lower.cpp
lib/Lower/Pass/: CIRCTTypeConverter.cpp  CIRCTTypeConverter.h  NSLCheckSemanticsPass.cpp  NSLExpandGeneratePass.cpp  NSLExpandVariablesPass.cpp  NSLExplodeSubmodArrayPass.cpp  NSLInlineInternalFuncPass.cpp  NSLResolveParamsPass.cpp  NSLToCIRCTPass.cpp  NSLToCIRCTPass.h
lib/Parse/: CMakeLists.txt  CSTMode.cpp  ParseDecl.cpp  ParseExpr.cpp  ParseStmt.cpp  Parser.cpp  ParserImpl.h  PrecedenceTable.h  Recovery.cpp  Recovery.h
lib/Preprocess/: CMakeLists.txt  DirectiveParser.cpp  DirectiveParser.h  HelperEvaluator.cpp  HelperEvaluator.h  IdentSplicer.cpp  IdentSplicer.h  MacroExpander.cpp  MacroTable.cpp  MacroTable.h  PPExpression.cpp  PPExpression.h  Preprocessor.cpp
lib/Sema/: CMakeLists.txt  ConstraintCheckRegistry.cpp  ConstraintCheckRegistry.h  ResolutionPass.cpp  ResolutionPass.h  Sema.cpp  SymbolTable.cpp  TypeSystem.cpp
lib/Sema/Constraints/: ConstraintHelpers.h  S01_NoDoubleUnderscore.cpp  S02_WireNoInit.cpp  S03_AssignmentLHSKind.cpp  S04_FuncDummyArgDirs.cpp  S05_ReturnTerminalDir.cpp  S06_ProcArgRegOnly.cpp  S07_SeqInsideFuncProc.cpp  S08_LoopInsideSeq.cpp  S09_ForVarReg.cpp  S10_GenerateVarInteger.cpp  S11_StateNameProcScoped.cpp  S12_PartialLHSVariableOnly.cpp  S13_AltAnyClassification.cpp  S14_ConditionalElseRequired.cpp  S15_SliceIndicesConst.cpp  S16_ParamHDLOnly.cpp  S17_SystemTaskSimulationOnly.cpp  S18_StructMSBFirstPacking.cpp  S19_OneClockPerGoto.cpp  S20_InterfaceModifierClkRst.cpp  S21_ProcMethodsFinishInvoke.cpp  S22_ReturnWidthMatch.cpp  S23_RegOmittedWidth1Bit.cpp  S24_MemPartialInitZero.cpp  S25_GotoTwoKinds.cpp  S26_FuncFunctionWarn.cpp  S27_ControlTerminalAs1Bit.cpp  S28_FirstStatePositioning.cpp  S29_InitBlockPlacement.cpp
test/lsp/: CMakeLists.txt  JSONTransport_test.cpp  LspSession.cpp  LspSession.h  architecture_test.cpp  cancellation_test.cpp  diagnostics_test.cpp  folding_test.cpp  lifecycle_test.cpp  lit.local.cfg.py
test/lsp/fixtures/: cancellation_target.nsl  clean_module.nsl  folding_parse_error.nsl  include_adjusts_lines.nsl  include_chain_helper.nslh  include_chain_main.nsl  large_file.nsl  module_with_blocks.nsl  multiline_block_comment.nsl  parse_error_missing_brace.nsl  preprocess_unresolved_include.nsl  s01_double_underscore.nsl  s02_wire_with_init.nsl  s03_eq_on_reg.nsl  s04_funcin_dummy_dir.nsl  s05_funcin_return_dir.nsl  (+22 more)
test_unit/: CMakeLists.txt
test_unit/Fmt/: CMakeLists.txt  config_parser_test.cpp  diff_emitter_test.cpp  directive_splitter_test.cpp  doc_layout_test.cpp  format_parity_test.cpp  perf_smoke_test.cpp
test_unit/add_nsl_library_test/: CMakeLists.txt
test_unit/ast_printer_test/: CMakeLists.txt  determinism_test.cpp
test_unit/ast_visitor_test/: CMakeLists.txt  ast_node_construct_test.cpp  visitor_exhaustiveness_test.cpp
test_unit/branch_protection_test/: CMakeLists.txt  test_protection_json.py
test_unit/ci_sh_test/: CMakeLists.txt  test_dispatch.py
test_unit/ci_yml_test/: CMakeLists.txt  test_ci_yml.py
test_unit/constructive_sn_test/: CMakeLists.txt  s13_test.cc  s18_test.cc  s19_test.cc  s23_test.cc  s24_test.cc  s27_test.cc
test_unit/determinism_test/: CMakeLists.txt
test_unit/diagnostic_engine_test/: CMakeLists.txt  diagnostic_engine_json_test.cpp  diagnostic_engine_sort_test.cpp  diagnostic_engine_text_test.cpp  include_stack_test.cpp
test_unit/dialect_register_test/: CMakeLists.txt  idempotency_test.cc
test_unit/helper_evaluator_test/: CMakeLists.txt  helper_evaluator_test.cpp
test_unit/macro_expander_test/: CMakeLists.txt  macro_expander_test.cpp
test_unit/macro_table_test/: CMakeLists.txt  macro_table_test.cpp
test_unit/parse_test/: CMakeLists.txt  parser_smoke_test.cpp
test_unit/recovery_set_test/: CMakeLists.txt  precedence_table_test.cpp  recovery_partial_ast_test.cpp  recovery_set_test.cpp
test_unit/resolution_pass_test/: CMakeLists.txt  identifier_resolution_test.cpp  no_cascade_test.cpp  scope_handling_test.cpp  symbol_declaration_test.cpp  width_inference_test.cpp
test_unit/sema_lifecycle_test/: CMakeLists.txt  ownership_test.cpp
test_unit/source_manager_test/: CMakeLists.txt  keyword_set_test.cpp  source_location_test.cpp  source_manager_test.cpp
test_unit/spdx_check_test/: CMakeLists.txt
test_unit/symbol_table_test/: CMakeLists.txt  scope_stack_test.cpp
test_unit/type_system_test/: CMakeLists.txt  interning_test.cpp
tools/: CMakeLists.txt  test_vcd_diff.py  vcd_diff.py
tools/nsl-fmt/: CMakeLists.txt  main.cpp
tools/nsl-lsp/: CMakeLists.txt  main.cpp
tools/nsl-opt/: CMakeLists.txt  main.cpp
tools/nslc/: CMakeLists.txt  main.cpp
(+1186 files in other folders)
