# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
#
# tools/ — drivers and command-line front-ends shipped from this
# repository. M0 has only `nslc`; future tools (nsl-opt at M4+, the
# T-track tools nsl-fmt at T2, nsl-lsp at T3, nsl-lint at T6) drop in
# alongside as new sub-directories.

add_subdirectory(nslc)
